--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but copa-app doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but copa doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
